git make publish - tony - 9/2022

--- a/pipe-runner/Makefile
+++ b/pipe-runner/Makefile
@@ -10,7 +10,14 @@ log:
 	        tail /wsefs/pipeline/log/pipe-runner.log
 
 
-cron:
-	echo '*/5 * * * * ' `pwd`/run.sh > mycron
-	cat mycron
-	crontab mycron
+# cron:
+	# echo '*/5 * * * * ' `pwd`/run.sh > mycron
+	# cat mycron
+	# crontab mycron
+
+service:
+	./installService.sh
+
+
+stat:
+	sudo systemctl status pipe-runner
