git make publish - tony - 9/2022

--- a/pipe-runner/Makefile
+++ b/pipe-runner/Makefile
@@ -18,6 +18,13 @@ log:
 service:
 	./installService.sh
 
+stop:
+	sudo systemctl stop pipe-runner
+	sudo systemctl status pipe-runner
+
 
 stat:
 	sudo systemctl status pipe-runner
+
+d:
+	python3 test_docker_wrangle_run.py
