git make publish - tony - 9/2022

--- a/ssebop-launcher/ssebop-launcher.conf
+++ b/ssebop-launcher/ssebop-launcher.conf
@@ -1,8 +1,11 @@
 ---
-computeMachine: ws-kul-dev
+computeMachine: ws-butzer-dev
 todo: /wsefs/pipeline/todo
 log: /wsefs/pipeline/log
 
 steps:
-  - data-wrangle
-  - steffi-one-dummy
+  - wrangle
+  - etfFano  
+  - etfBaba  
+  - eta  
+  - etAnomalyMap  
