git make publish - tony - 9/2022

--- a/step-stubs/steps/normToGrid/Dockerfile
+++ b/step-stubs/steps/normToGrid/Dockerfile
@@ -1,11 +1,12 @@
 from pipe-runner-base
 
+run groupadd -r -g 1000 ec2-user && useradd -r -u 1000 -g ec2-user ec2-user
+
 run mkdir /normToGrid && mkdir /wsefs
 
 copy normToGrid.* /normToGrid/
+run chown -R ec2-user /normToGrid
 
 workdir /normToGrid
-
-run groupadd -r -g 1000 ec2-user && useradd -r -u 1000 -g ec2-user ec2-user
 
 user ec2-user
