git make publish - tony - 9/2022

--- a/ssebop-launcher/Makefile
+++ b/ssebop-launcher/Makefile
@@ -16,3 +16,10 @@ dirs:
 	mkdir -p /wsefs/pipeline/complete
 	mkdir -p /wsefs/pipeline/terminated
 	mkdir -p /wsefs/pipeline/log
+
+
+fake:
+	ls /wsefs/pipeline/todo
+	rm -f /wsefs/pipeline/todo/*.todo
+	ls /wsefs/pipeline/todo
+	cp test.todo /wsefs/pipeline/todo/abc.todo
