git make publish - tony - 9/2022

--- a/ssebop-launcher/ssebop-launcher.conf
+++ b/ssebop-launcher/ssebop-launcher.conf
@@ -1,11 +1,11 @@
 ---
-computeMachine: ws-butzer-dev
+computeMachine: ws-veget-dev
 todo: /wsefs/pipeline/todo
 log: /wsefs/pipeline/log
 
 steps:
   - wrangle
-  - etfFano  
-  - etfBaba  
+  - normtogrid  
+  - etf  
   - eta  
-  - etAnomalyMap  
+  - etanomalymap  
